--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   dio: ^5.4.0
   retrofit: ^4.1.0
   pretty_dio_logger: ^1.3.0
+  flutter_markdown: ^0.6.18
 
   # Local Storage / DB
   drift: ^2.15.0
