--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,15 @@ dependencies:
   equatable: ^2.0.5
   dartz: ^0.10.1
   intl: ^0.19.0
+  crypto: ^3.0.3
+  path: ^1.9.0
+  path_provider: ^2.1.4
   # Firebase
   firebase_core: ^2.27.0
   firebase_auth: ^4.17.0
 
 dev_dependencies:
+  drift_dev: ^2.19.0
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
@@ -54,4 +58,3 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
-
