feat(db): S3.1 bump schemaVersion to 3 and add migration (etags table + idempotent indexes + fetchedAt backfill)

--- a/.mcp_chain/plan.yaml
+++ b/.mcp_chain/plan.yaml
@@ -44,7 +44,7 @@ stages:
         file: 'lib/core/db/app_database.dart'
         instructions: 'onUpgrade: додати createIndex/alterTable; міграції для ETag/індексів'
         requireCleanContext: true
-        status: 'pending'
+        status: 'done'
       - id: S3.2
         title: 'Тести міграцій (in-memory)'
         type: 'test'
