--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   crypto: ^3.0.3
   path: ^1.9.0
   path_provider: ^2.1.4
+  collection: ^1.18.0
   # Firebase
   firebase_core: ^2.27.0
   firebase_auth: ^4.17.0
