feat: harden web shell and typed routing

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # State Management
   flutter_riverpod: ^2.5.0
@@ -33,7 +35,7 @@ dependencies:
   json_annotation: ^4.9.0
   equatable: ^2.0.5
   dartz: ^0.10.1
-  intl: ^0.19.0
+  intl: ^0.20.2
   crypto: ^3.0.3
   path: ^1.9.0
   path_provider: ^2.1.4
@@ -46,6 +48,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+
+  go_router_builder: ^2.4.1
 
   # Code Generation
   build_runner: ^2.4.0
