--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dev_dependencies:
   json_serializable: ^6.8.0
   riverpod_generator: ^2.3.0
   retrofit_generator: ^8.0.0
+  integration_test:
+    sdk: flutter
 
 flutter:
   uses-material-design: true
