--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
 
   # State Management
   flutter_riverpod: ^2.5.0
@@ -33,7 +37,7 @@ dependencies:
   json_annotation: ^4.9.0
   equatable: ^2.0.5
   dartz: ^0.10.1
-  intl: ^0.19.0
+  intl: ^0.20.2
   crypto: ^3.0.3
   path: ^1.9.0
   path_provider: ^2.1.4
