--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
 
   # State Management
   flutter_riverpod: ^2.5.0
@@ -33,7 +37,7 @@ dependencies:
   json_annotation: ^4.9.0
   equatable: ^2.0.5
   dartz: ^0.10.1
-  intl: ^0.19.0
+  intl: ^0.20.2
   crypto: ^3.0.3
   path: ^1.9.0
   path_provider: ^2.1.4
@@ -49,6 +53,7 @@ dev_dependencies:
 
   # Code Generation
   build_runner: ^2.4.0
+  go_router_builder: ^2.4.1
   freezed: ^2.4.0
   json_serializable: ^6.8.0
   riverpod_generator: ^2.3.0
