--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
 
   # State Management
   flutter_riverpod: ^2.5.0
@@ -26,7 +28,6 @@ dependencies:
 
   # Local Storage / DB
   drift: ^2.15.0
-  sqlite3_flutter_libs: ^0.5.0
   hive_flutter: ^1.1.0
   flutter_secure_storage: ^9.0.0
 
@@ -59,6 +60,10 @@ dev_dependencies:
   retrofit_generator: ^8.0.0
   integration_test:
     sdk: flutter
+  custom_lint: ^0.6.4
+  riverpod_lint: ^2.3.0
+  mocktail: ^1.0.3
+  fake_async: ^1.3.1
 
 flutter:
   uses-material-design: true
