--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,60 +3,63 @@ description: DevHub — Flutter app scaffold following Clean Architecture and fe
 publish_to: 'none'
 
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: '>=3.9.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
 
   # State Management
-  flutter_riverpod: ^2.5.0
-  riverpod_annotation: ^2.3.0
+  flutter_riverpod: ^3.0.0
+  riverpod_annotation: ^3.0.0
 
   # Navigation
-  go_router: ^13.2.0
+  go_router: ^16.2.2
 
   # Networking
-  dio: ^5.4.0
-  retrofit: ^4.1.0
-  pretty_dio_logger: ^1.3.0
-  flutter_markdown: ^0.6.18
+  dio: ^5.9.0
+  retrofit: ^4.7.2
+  pretty_dio_logger: ^1.4.0
+  markdown_widget: ^2.3.2+8
+  url_launcher: ^6.3.2
 
   # Local Storage / DB
-  drift: ^2.15.0
-  sqlite3_flutter_libs: ^0.5.0
+  drift: ^2.28.2
+  sqlite3_flutter_libs: ^0.5.39
   hive_flutter: ^1.1.0
-  flutter_secure_storage: ^9.0.0
+  flutter_secure_storage: ^9.2.4
 
   # Utilities / Modeling
-  freezed_annotation: ^2.4.0
+  freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
   equatable: ^2.0.5
   dartz: ^0.10.1
   intl: ^0.20.2
   crypto: ^3.0.3
   path: ^1.9.0
-  path_provider: ^2.1.4
+  path_provider: ^2.1.5
   # Firebase
-  firebase_core: ^2.27.0
-  firebase_auth: ^4.17.0
+  firebase_core: ^4.1.1
+  firebase_auth: ^6.1.0
 
 dev_dependencies:
-  drift_dev: ^2.19.0
+  drift_dev: ^2.28.3
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^6.0.0
 
-  go_router_builder: ^2.4.1
+  go_router_builder: ^4.0.1
 
   # Code Generation
-  build_runner: ^2.4.0
-  freezed: ^2.4.0
-  json_serializable: ^6.8.0
-  riverpod_generator: ^2.3.0
-  retrofit_generator: ^8.0.0
+  build_runner: ^2.4.13
+  freezed: ^3.2.3
+  json_serializable: ^6.11.1
+  riverpod_generator: ^3.0.0
+  retrofit_generator: 10.0.0
   integration_test:
     sdk: flutter
 
