--- a/web/manifest.json
+++ b/web/manifest.json
@@ -9,6 +9,7 @@
   "description": "DevHub — ваш GitHub дашборд з нотатками та AI-помічником.",
   "orientation": "portrait-primary",
   "prefer_related_applications": false,
+  "gcm_sender_id": "103953800507",
   "icons": [
     {
       "src": "icons/Icon-192.png",
