--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   pretty_dio_logger: ^1.4.0
   markdown_widget: ^2.3.2+8
   url_launcher: ^6.3.2
+  file_picker: ^8.1.2
+  share_plus: ^10.0.2
 
   # Local Storage / DB
   drift: ^2.28.2
