Add remote config welcome banner

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_core: ^4.1.1
   firebase_auth: ^6.1.0
   firebase_messaging: ^16.0.2
+  firebase_remote_config: ^6.0.2
 
 dev_dependencies:
   drift_dev: ^2.28.3
