Add media compression modes to file uploader

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   url_launcher: ^6.3.2
   file_picker: ^8.1.2
   share_plus: ^10.0.2
+  archive: ^3.6.1
 
   # Local Storage / DB
   drift: ^2.28.2
@@ -44,6 +45,7 @@ dependencies:
   crypto: ^3.0.3
   path: ^1.9.0
   path_provider: ^2.1.5
+  image: ^4.2.0
   # Firebase
   firebase_core: ^4.1.1
   firebase_auth: ^6.1.0
