--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "git.openRepositoryInParentFolders": "never",
-  "git.autoRepositoryDetection": "subFolders"
+  "dart.flutterAdditionalArgs": [
+    "--dart-define-from-file=dart_defines.local.json"
+  ]
 }
-
