--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   sqlite3_flutter_libs: ^0.5.39
   hive_flutter: ^1.1.0
   flutter_secure_storage: ^9.2.4
+  shared_preferences: ^2.2.2
 
   # Utilities / Modeling
   freezed_annotation: ^3.1.0
