--- a/server_dart/pubspec.yaml
+++ b/server_dart/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   shelf_cors_headers: ^0.1.5
   http: ^1.2.2
   dotenv: ^4.2.0
+  crypto: ^3.0.3
 dev_dependencies:
   test: ^1.25.0
   lints: ^3.0.0
