--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   dio_cache_interceptor: ^3.5.0
   dio_smart_retry: ^7.0.1
   retrofit: ^4.7.2
+  graphql: ^5.2.0
   pretty_dio_logger: ^1.4.0
   markdown_widget: ^2.3.2+8
   url_launcher: ^6.3.2
