--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   archive: ^3.6.1
   stripe_js: ^7.0.0
   collection: ^1.18.0
+  web_socket_channel: ^3.0.1
 
   # Local Storage / DB
   drift: ^2.28.2
@@ -74,6 +75,7 @@ dev_dependencies:
   integration_test:
     sdk: flutter
   mocktail: ^1.0.3
+  stream_channel: ^2.1.1
 
 flutter:
   uses-material-design: true
